resources/css/app.css
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;   /* Safari */
    -khtml-user-select: none;    /* Konqueror HTML */
    user-select: none;           /* Non-prefixed version, currently
                                    supported by Chrome and Opera */
}

body {
    background: #f8f8f8;
	font: normal 14px "Helvetica Neue",Helvetica,Arial,sans-serif;
	-webkit-text-size-adjust: 100%;
}

a {
    color: #777;
}

.main-background {
    background: #f8f8f8;
    height: 100%;
    left: 0px;
    position: fixed;
    top: 0px;
    width: 100%;
    z-index: -1;
}

.conversejs-adoption {
    background: transparent;
    pointer-events: none;
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
}

#conversejs .converse-chatboxes {
    pointer-events: none;
}

#conversejs .converse-chatboxes > * {
    pointer-events: auto;
}

